--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="root" />
+  <script src="./socket-io.js"></script>
   <script src="/static/bundle.js"></script>
 </body>
 </html>
