--- a/grouphub.html
+++ b/grouphub.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="root" />
-  <script src="/static/bundle.js"></script>
+  <script src="/static/commons.js"></script>
+  <script src="/static/grouphub.bundle.js"></script>
 </body>
 </html>
