--- a/loginRegister.html
+++ b/loginRegister.html
@@ -7,6 +7,6 @@
 <body>
   <div id="root" />
   <script src="/static/commons.js"></script>
-  <script src="/static/userhub.bundle.js"></script>
+  <script src="/static/loginRegister.bundle.js"></script>
 </body>
 </html>
